--- a/04-Simpleregressions.Rmd
+++ b/04-Simpleregressions.Rmd
@@ -37,7 +37,7 @@ est <- summary(model)$coef[,1]
 
 1. Using stargazer package
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(stargazer)
 
 stargazer(lm(y~x, data=data), type="text")
@@ -153,7 +153,7 @@ pred2 <- predict(model, newdata, interval="predict",level=0.95)
 
 Adds: observed values, fitted line, conf interval, predicted interval
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 library(HH)
 fit <- lm(y~x, data = data)
 ci.plot(fit)
