--- a/packages.bib
+++ b/packages.bib
@@ -265,6 +265,14 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://CRAN.R-project.org/package=readxl},
 }
 
+@Manual{R-reticulate,
+  title = {reticulate: Interface to Python},
+  author = {Kevin Ushey and JJ Allaire and Yuan Tang},
+  year = {2020},
+  note = {R package version 1.18},
+  url = {https://github.com/rstudio/reticulate},
+}
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
